deploy/bingo/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowitness
  labels:
    app: gowitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gowitness
  template:
    metadata:
      labels:
        app: gowitness
    spec:
      containers:
      - name: gowitness
        image: huangyingting/gowitness:latest
        command: ["gowitness"]
        args: ["server", "--address", "0.0.0.0:7171", "-X", "800", "-Y", "600"]
        ports:
        - name: http
          containerPort: 7171
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
  labels:
    app: be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
      - name: be
        image: ghcr.io/huangyingting/be:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bg
  labels:
    app: bg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bg
  template:
    metadata:
      labels:
        app: bg
    spec:
      containers:
      - name: bg
        image: ghcr.io/huangyingting/bg:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000         
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi
  labels:
    app: bi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bi
  template:
    metadata:
      labels:
        app: bi
    spec:
      containers:
      - name: be
        image: ghcr.io/huangyingting/bi:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bs
  labels:
    app: bs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bs
  template:
    metadata:
      labels:
        app: bs
    spec:
      containers:
      - name: bs
        image: ghcr.io/huangyingting/bs:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
