deploy/bingo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowitness
  labels:
    app: gowitness
spec:
  ports:
  - name: http
    port: 7171
    targetPort: 7171
  selector:
    app: gowitness
---
apiVersion: v1
kind: Service
metadata:
  name: be
  labels:
    app: be
spec:
  ports:
  - name: http
    port: 8002
    targetPort: 8002
  selector:
    app: be
---
apiVersion: v1
kind: Service
metadata:
  name: bg
  labels:
    app: bg
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: bg
---
apiVersion: v1
kind: Service
metadata:
  name: bi
  labels:
    app: bi
spec:
  ports:
  - name: http
    port: 8001
    targetPort: 8001
  selector:
    app: bi
---
apiVersion: v1
kind: Service
metadata:
  name: bs
  labels:
    app: bs
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: bs
