deploy/bingo/bingo.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowitness
  labels:
    app: gowitness
spec:
  ports:
  - name: http
    port: 7171
    targetPort: 7171
  selector:
    app: gowitness
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowitness
  labels:
    app: gowitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gowitness
  template:
    metadata:
      labels:
        app: gowitness
    spec:
      containers:
      - name: gowitness
        image: huangyingting/gowitness:latest
        command: ["gowitness"]
        args: ["server", "--address", "0.0.0.0:7171", "-X", "800", "-Y", "600"]
        ports:
        - name: http
          containerPort: 7171
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  labels:
    app: gowitness
  name: gowitness
spec:
  rules:
  - host: gowitness.aliases.biz
    http:
      paths:
      - backend:
          service:
            name: gowitness
            port:
              number: 7171
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - gowitness.aliases.biz
    secretName: gowitness-tls
---
apiVersion: v1
kind: Service
metadata:
  name: be
  labels:
    app: be
spec:
  ports:
  - name: http
    port: 8002
    targetPort: 8002
  selector:
    app: be
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
  labels:
    app: be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
      - name: be
        image: ghcr.io/huangyingting/be:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: bg
  labels:
    app: bg
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: bg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bg
  labels:
    app: bg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bg
  template:
    metadata:
      labels:
        app: bg
    spec:
      containers:
      - name: bg
        image: ghcr.io/huangyingting/bg:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000         
---
apiVersion: v1
kind: Service
metadata:
  name: bi
  labels:
    app: bi
spec:
  ports:
  - name: http
    port: 8001
    targetPort: 8001
  selector:
    app: bi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi
  labels:
    app: bi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bi
  template:
    metadata:
      labels:
        app: bi
    spec:
      containers:
      - name: be
        image: ghcr.io/huangyingting/bi:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: bs
  labels:
    app: bs
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: bs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bs
  labels:
    app: bs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bs
  template:
    metadata:
      labels:
        app: bs
    spec:
      containers:
      - name: bs
        image: ghcr.io/huangyingting/bs:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  name: bs
spec:
  rules:
  - host: aliases.biz
    http:
      paths:
      - backend:
          service:
            name: bs
            port:
              number: 8080
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - aliases.biz
    secretName: bs-tls
